@@ -3,7 +3,6 @@ Section: science
 Priority: optional
 Maintainer: Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>
 Build-Depends: debhelper (>= 9),
-	autotools-dev,
 	cmake,
 	perl,
 	zlib1g-dev,
@@ -35,7 +34,7 @@ Build-Depends: debhelper (>= 9),
 	libsuitesparse-dev,
 	python-numpy,
 	libeigen3-dev
-Standards-Version: 3.9.8
+Standards-Version: 4.0.0
 Homepage: http://www.mrpt.org/
 
 Package: mrpt-doc
@@ -69,7 +68,6 @@ Description: Mobile Robot Programming Toolkit - Documentation and examples
 Package: libmrpt-base@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
 Description: Mobile Robot Programming Toolkit - base library
@@ -86,7 +84,6 @@ Description: Mobile Robot Programming Toolkit - base library
 Package: libmrpt-opengl@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-base@MRPT_VER_MM@
 Multi-Arch: same
@@ -105,7 +102,6 @@ Description: Mobile Robot Programming Toolkit - opengl library
 Package: libmrpt-gui@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-opengl@MRPT_VER_MM@
 Multi-Arch: same
@@ -123,7 +119,6 @@ Description: Mobile Robot Programming Toolkit - gui library
 Package: libmrpt-obs@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-opengl@MRPT_VER_MM@
 Multi-Arch: same
@@ -141,7 +136,6 @@ Description: Mobile Robot Programming Toolkit - obs library
 Package: libmrpt-maps@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-obs@MRPT_VER_MM@
 Multi-Arch: same
@@ -160,7 +154,6 @@ Description: Mobile Robot Programming Toolkit - maps library
 Package: libmrpt-hwdrivers@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-obs@MRPT_VER_MM@,
 	  libmrpt-gui@MRPT_VER_MM@
@@ -179,7 +172,6 @@ Description: Mobile Robot Programming Toolkit - hwdrivers library
 Package: libmrpt-graphslam@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
  	  libmrpt-slam@MRPT_VER_MM@
 Multi-Arch: same
@@ -198,7 +190,6 @@ Description: Mobile Robot Programming Toolkit - graphslam library
 Package: libmrpt-vision@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-obs@MRPT_VER_MM@
 Multi-Arch: same
@@ -216,7 +207,6 @@ Description: Mobile Robot Programming Toolkit - vision library
 Package: libmrpt-tfest@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
           libmrpt-base@MRPT_VER_MM@
 Multi-Arch: same
@@ -235,7 +225,6 @@ Description: Mobile Robot Programming Toolkit - tfest library
 Package: libmrpt-topography@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-tfest@MRPT_VER_MM@,
 	  libmrpt-obs@MRPT_VER_MM@
@@ -255,7 +244,6 @@ Description: Mobile Robot Programming Toolkit - topography library
 Package: libmrpt-detectors@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-maps@MRPT_VER_MM@,
 	  libmrpt-vision@MRPT_VER_MM@,
@@ -276,7 +264,6 @@ Description: Mobile Robot Programming Toolkit - detectors library
 Package: libmrpt-slam@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-maps@MRPT_VER_MM@,
 	  libmrpt-vision@MRPT_VER_MM@,
@@ -297,7 +284,6 @@ Description: Mobile Robot Programming Toolkit - slam library
 Package: libmrpt-nav@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-maps@MRPT_VER_MM@
 Multi-Arch: same
@@ -316,7 +302,6 @@ Description: Mobile Robot Programming Toolkit - nav library
 Package: libmrpt-hmtslam@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-slam@MRPT_VER_MM@
 Multi-Arch: same
@@ -335,7 +320,6 @@ Description: Mobile Robot Programming Toolkit - hmtslam library
 Package: libmrpt-kinematics@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
 	  libmrpt-opengl@MRPT_VER_MM@
 Multi-Arch: same
@@ -354,7 +338,6 @@ Description: Mobile Robot Programming Toolkit - kinematics library
 Package: libmrpt-graphs@MRPT_VER_MM@
 Section: libs
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
  	  libmrpt-base@MRPT_VER_MM@
 Multi-Arch: same
@@ -453,4 +436,3 @@ Description: Mobile Robot Programming Toolkit - Console and GUI applications
   - robotic-arm-kinematics: GUI for design of robot arms with
                             Denavit-Hartenberg parameters.
   - velodyne-view: Live display/grabbing of Velodyne scanners.
-  
