@@ -47,9 +47,8 @@ CMAKE_FLAGS = \
 # Don't set: CMAKE_SKIP_RPATH=ON --> it makes unit tests to fail,
 # and the rpath is removed anyway by cmake's install target.
 
-
 %:
-	dh $@ --buildsystem=cmake --parallel
+	dh $@ --buildsystem=cmake
 
 override_dh_auto_build:
 	dh_auto_build -O--buildsystem=cmake -- # -j4
